Fixing width stylings on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -13,5 +13,6 @@ body {
   font-family: 'Karla', sans-serif;
   min-height: 100vh;
   overflow-x: scroll;
+  overflow-y: scroll;
   padding: 0 1em;
 }
